# PymgridExperiments

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt  setup.cfg
logs/pymgrid/24-05-2022/baseline_pymgrid_1/: events.out.tfevents.1653407946.MacBook-Pro-de-Yann.local.15246.0
models/: baseline_pymgrid_1_best.pth
src/pymgridexperiments/: benchmark_pymgrid.py  pymgrid_clusters.py  pymgrid_config.py  pymgrid_experiment.py  pymgrid_macro.py  pymgrid_macro_polar.py  rule_based.py  utils.py
src/pymgridexperiments/data/: fakeYears_archId1_15042022.pkl
