[tool.poetry]
name = "pymgridexperiments"
version = "0.1.0"
description = ""
authors = ["YANN BERTHELOT <yann.berthelot@capgemini.com>"]
readme = "README.md"
packages = [
    { include = "pymgridexperiments", from = "src" },
]
include = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
deeprlyb = "^0.4.15"
cffi = "1.15.0"
cvxpy = "^1.2.1"
statsmodels = "^0.13.2"
osqp = {git = "https://github.com/osqp/osqp-python"}
pymgrid = {git = "https://github.com/YannBerthelot/pymgrid", rev = "debugging_clean_slate"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pypi_test"
url = "https://test.pypi.org/simple/"
secondary = true
